@@ -1,42 +1,0 @@
-
-/*
- * Template for HTTP GET CRUD requests.
- *
- * Expects {database} and {table} [apply] arguments.
- */
-.arguments
-   limit:long
-   offset:long
-   order:string
-   direction:string
-
-
-/*
- * Parametrizing [magic.db.xxx.read].
- */
-add:x:./*/wait.slots.signal/*/args
-   get-nodes:x:@.arguments/*
-
-
-/*
- * Removing any password fields, to avoid returning them to client.
- */
-remove-node:x:../*/wait.slots.signal/*/columns/*/pwd
-remove-node:x:../*/wait.slots.signal/*/columns/*/password
-remove-node:x:../*/wait.slots.signal/*/columns/*/Password
-
-
-/*
- * Invoking [magic.db.xxx.read], making sure we unwrap the [id].
- */
-wait.slots.signal:magic.db.xxx.read
-   database:{database}
-   table:{table}
-   args
-   columns
-
-
-/*
- * Returning results back to caller.
- */
-slots.return-nodes:x:@wait.slots.signal/*
